tests/errors/preprocessor/030_include.c.expect
./tests/errors/preprocessor/030_include.c:1:8: error: #include directive expects "filepath" or <filepath>
1 | #include
           ^
